# imxrt-usbh

./: .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  DEAD_CODE_ANALYSIS.md  DESIGN.md  LICENSE-MIT  LINKER.md  README.md  build-examples.sh  build.rs  project-board.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: build-examples.yml
examples/: 01_basic_host_init.rs  01_hello_keyboard.rs  02_device_enumeration.rs  02_device_info.rs  03_hid_mouse.rs  03_qwerty_keyboard.rs  04_hid_gamepad.rs  04_midi_keyboard.rs  05_multi_device_manager.rs  05_typing_game.rs  README.md  common.rs  enumerate_device.rs  example_hid.rs  example_msc.rs  hid_gamepad.rs  hid_keyboard.rs  mass_storage.rs  midi_keyboard.rs
examples/advanced/: a01_phy_initialization.rs  a03_midi_keyboard.rs  a05_mass_storage.rs
src/: dma.rs  embassy.rs  enumeration.rs  error.rs  hid.rs  hub.rs  lib.rs  lib_test.rs  msc.rs  perf.rs  phy.rs  recovery.rs  rtic.rs  safety.rs  transfer.rs  vbus.rs
src/dma/: buffer.rs  descriptor.rs  memory.rs  pools.rs  simple_memory.rs
src/ehci/: controller.rs  error_recovery.rs  mod.rs  periodic.rs  qh.rs  qtd.rs  register.rs  transfer_executor.rs
src/hid/: constants.rs  device.rs  keyboard.rs  mod.rs  mouse.rs
src/rtic/: interrupt.rs
src/simple/: device.rs  events.rs  mod.rs
src/transfer/: bulk.rs  control.rs  interrupt.rs  isochronous.rs  simple_control.rs
tests/: TESTING_MODEL.md  TESTS_IMPLEMENTED.md  error_handling.rs  hil.rs  integration.rs  integration_test.rs  resource_management.rs  simple_test.rs
tests/common/: mock_hardware.rs  mod.rs
tests/hil/: mod.rs
