[package]
name = "imxrt-usbh"
version = "0.1.0"
edition = "2021"
authors = ["ACertain"]
license = "MIT OR Apache-2.0"
description = "USB Host driver for i.MX RT1062 (Teensy 4.x)"
repository = "https://github.com/acertain/imxrt-usbh"
keywords = ["no-std", "embedded", "usb", "host", "imxrt"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", optional = true }
imxrt-ral = { version = "0.5", features = ["imxrt1062"] }
imxrt-hal = { version = "0.5", features = ["imxrt1060"], optional = true }
embedded-hal = "1.0"
nb = "1.1"
heapless = "0.8"
critical-section = "1.1"
atomic-polyfill = "1.0"
bitflags = "2.4"

# RTIC support
rtic = { version = "2.0", optional = true }
rtic-monotonics = { version = "1.5", optional = true, features = ["cortex-m-systick"] }
rtic-sync = { version = "1.3", optional = true }

# Optional dependencies
defmt = { version = "0.3", optional = true }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
panic-halt = "1.0"
defmt-rtt = "0.4"
cortex-m-rt = "0.7"
rtic = { version = "2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.5", features = ["cortex-m-systick"] }

[features]
default = ["defmt"]
rt = ["cortex-m-rt"]
rtic-support = [
    "dep:rtic",
    "dep:rtic-monotonics",
    "dep:rtic-sync",
]
alloc = []
hub = []
defmt = ["dep:defmt"]
tracing = ["dep:tracing"]
hal = ["dep:imxrt-hal"]

# Examples will be added once core implementation is complete

[profile.release]
opt-level = "z"
lto = true
debug = true
