[package]
name = "imxrt-usbh"
version = "0.1.0"
edition = "2021"
authors = ["ACertain"]
license = "MIT OR Apache-2.0"
description = "USB Host driver for i.MX RT1062 (Teensy 4.x)"
repository = "https://github.com/acertain/imxrt-usbh"
keywords = ["no-std", "embedded", "usb", "host", "imxrt"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", optional = true }
imxrt-ral = { version = "0.5", features = ["imxrt1062"] }
imxrt-hal = { version = "0.5", features = ["imxrt1060"], optional = true }
embedded-hal = "1.0"
embedded-hal-nb = "1.0"  # Added for proper embedded-hal integration
nb = "1.1"
heapless = "0.8"
critical-section = "1.1"
atomic-polyfill = "1.0"
bitflags = "2.4"

# RTIC support
rtic = { version = "2.0", optional = true }
rtic-monotonics = { version = "1.5", optional = true, features = ["cortex-m-systick"] }
rtic-sync = { version = "1.3", optional = true }
imxrt-dma = { version = "0.1", optional = true }

# Optional dependencies
defmt = { version = "0.3", optional = true }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
panic-halt = "1.0"
cortex-m-rt = "0.7"
rtic = { version = "2.0", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.5", features = ["cortex-m-systick"] }
teensy4-bsp = { version = "0.4", features = ["rt"] }
teensy4-panic = "0.2"
imxrt-hal = { version = "0.5", features = ["imxrt1060"] }
imxrt-dma = "0.1"
imxrt-log = { version = "0.1", features = ["log", "lpuart", "usbd"] }
log = "0.4"
imxrt-usbd = "0.3"
usb-device = "0.3"
usbd-serial = "0.2"

[features]
# Default features for embedded use
default = ["defmt"]

# Core features
rt = ["cortex-m-rt"]  # Runtime support
hal = ["dep:imxrt-hal"]  # HAL integration
hub = []  # Hub support (including Transaction Translator)

# RTOS integration
rtic-support = [
    "dep:rtic",
    "dep:rtic-monotonics",
    "dep:rtic-sync",
]

# Memory management
alloc = []  # Enable alloc support (requires allocator)

# Debugging/logging
defmt = ["dep:defmt"]  # defmt logging (embedded)
tracing = ["dep:tracing"]  # tracing support (desktop)

# Testing
std = []  # Enable std for unit testing
test-utils = []  # Test utilities and mocks

# Documentation
doc = []  # Enable all features for docs.rs

# Linter configuration for embedded/no_std project
[lints.rust]
warnings = "warn"
static_mut_refs = "warn"
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
all = "warn"  # Set all clippy lints to warn instead of deny
mut_from_ref = "allow"
missing_docs = "allow"
missing_safety_doc = "allow"
new_without_default = "allow"
too_many_arguments = "allow"
identity_op = "allow"
declare_interior_mutable_const = "allow"
needless_range_loop = "allow"
manual_flatten = "allow"
if_same_then_else = "allow"
collapsible_if = "allow"
manual_unwrap_or = "allow"
implicit_saturating_sub = "allow"
needless_return = "allow"
unnecessary_cast = "allow"

# Profile configurations for embedded optimization
[profile.release]
opt-level = "z"  # Optimize for size
lto = true  # Link-time optimization
debug = true  # Keep debug info
codegen-units = 1  # Better optimization
strip = false  # Keep symbols for debugging

[profile.release.package."*"]
opt-level = "z"  # Optimize dependencies for size
strip = true  # Strip symbols from dependencies

[profile.dev]
opt-level = 1  # Some optimization in dev
debug = true

[profile.dev.package."*"]
opt-level = "z"  # Optimize dependencies even in dev

# Minimal binary size for production
[profile.release-min]
inherits = "release"
opt-level = "z"
lto = "fat"
debug = false
strip = true
panic = "abort"

# docs.rs configuration
[package.metadata.docs.rs]
all-features = true
default-target = "thumbv7em-none-eabihf"
targets = ["thumbv7em-none-eabihf", "thumbv7em-none-eabi"]
rustdoc-args = ["--cfg", "docsrs"]
